keep moving forward

--- a/websiteFolder/website.html
+++ b/websiteFolder/website.html
@@ -4,6 +4,9 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, intial-scale = 1.0">
         <title>Make websites</title>
+        <link rel="stylesheet" type="text/css" href="css/reset.css">
+        <link rel="stylesheet" type ="text/css" href="css/style.css">
+        <link rel ="stylesheet" type="text/css" href="css/media.css">
     </head>
     <body>
         <div id ="container">
@@ -15,12 +18,12 @@
                     <ul>
                         <!--beginning of the list-->
                         <li class="breadcrumb">
-                          <a></a>
+                          <a href="#"> Home</a>
                         </li>
                         <li class="breadcrumb">
-                            <a></a>
+                            <a href="#">About</a>
                         </li>
-                        <li class="breadcrumb"><a>
+                        <li class="breadcrumb"><a href="x">Contact
 
                         </a></li>
                     </ul>
