keep moving forward

--- a/websiteFolder/website.html
+++ b/websiteFolder/website.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" type="text/css" href="css/reset.css">
         <link rel="stylesheet" type ="text/css" href="css/style.css">
         <link rel ="stylesheet" type="text/css" href="css/media.css">
+        <link href="https://fonts.googleapis.com/css?family=Charmonman" rel="stylesheet">
     </head>
     <body>
         <div id ="container">
@@ -71,6 +72,10 @@
             </section>
 
         </div>
+        </div>
+
+        <div id = footer>
+               wow
         </div>
     </body>
 </html>
