keep moving forward

--- a/websiteFolder/website.html
+++ b/websiteFolder/website.html
@@ -82,7 +82,7 @@
            </div>
 
         <div id = footer>
-               wow
+                <p> So Keep Moving Forward </p>
         </div>
     </body>
 </html>
